ibuilder/tests/not_compile/incompatible_default.stderr
error[E0277]: the trait bound `i64: std::convert::From<&str>` is not satisfied
 --> $DIR/incompatible_default.rs:3:10
  |
3 | #[derive(IBuilder)]
  |          ^^^^^^^^ the trait `std::convert::From<&str>` is not implemented for `i64`
  |
  = help: the following implementations were found:
            <i64 as std::convert::From<bool>>
            <i64 as std::convert::From<i16>>
            <i64 as std::convert::From<i32>>
            <i64 as std::convert::From<i8>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<i64>` for `&str`

error[E0600]: cannot apply unary operator `-` to type `u64`
  --> $DIR/incompatible_default.rs:11:26
   |
11 |     #[ibuilder(default = -123)]
   |                          ^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated
